# C_P_P_Projects

./: README.md
project_01/: .gitignore  CMakeLists.txt  build.sh
project_01/src/: main.cpp  sum.cpp
project_01/tests/: test_sum.cpp
